# ozy

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  environment.yml  requirements.txt  setup.py
.github/workflows/: ci-py.yaml  ci-rust.yaml  ci.yaml  python.yaml  release-py.yaml  release-rust.yaml  release.yaml
ci/: ci.sh  pipeline.yaml  pipeline.yml
conf/: install.sh  sample-team-conf.yaml
ozy/: __init__.py  __main__.py  app.py  config.py  files.py  installer.py  utils.py
ozy/installers/: __init__.py  conda.py  docker.py  file.py  pip.py  shell.py  tar.py  zip.py
rozy/: .gitignore  Cargo.toml  README.md  install.sh
rozy/src/: app.rs  config.rs  files.rs  main.rs  utils.rs
rozy/src/installers/: conda.rs  file.rs  installer.rs  mod.rs  pip.rs  shell.rs  tarball.rs
rozy/test_resource/: unittest.ozy.yaml
src/: app.rs  config.rs  files.rs  main.rs
src/installers/: conda.rs  file.rs  installer.rs  mod.rs  pip.rs  shell.rs  single_binary_zip.rs  symlink.rs  tarball.rs  zip.rs
test/smoke/: test_target_config.py
test/unit/: test_app.py  test_config.py  test_installer.py  test_ozy.py  test_utils.py
test/unit/installers/: test_conda.py  test_pip.py
