[package]
name = "ozy"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3"
zip-extract = "0.1.1"
file-lock = "2.1.6"
uuid = { version = "1.2.2", features = ["v4"] }
clap = { version = "4.0.29", features = ["derive"] }
flate2 = "1.0.25"
tar = "0.4.38"
regex = "1.7.0"
bzip2 = "0.4.4"
xz2 = "0.1"
which = "4.3.0"
zip = "0.6.3"
openssl = { version = "0.10.48", features = ["vendored"] }
exec = "0.3.1"
semver = "1.0.16"
os_pipe = "1.1.2"
infer = "0.12.0"
